eks/staging/deployment/3-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: staging
  name: uidd-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: uidd
  template:
    metadata:
      labels:
        component: uidd
    spec:
      volumes:
        - name: uidd-storage
          persistentVolumeClaim:
            claimName: uidd-claim
      containers:
        - name: uidd
          image: uidesigndaily/web:tagVersion
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: uidd-storage
              mountPath: /usr/uidesigndaily/uploads
              subPath: uploads
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  namespace: staging
  name: uidd-service
spec:
  type: ClusterIP
  selector:
    component: uidd
  ports:
    - port: 3000
      targetPort: 3000
